[package]
name = "physics"
version = "0.1.0"
edition = "2021"

[dependencies]
libphysics = { version = "0.1.0", path = "../libphysics" }
Inflector  = "0.11"
nalgebra   = "0.29"
parry2d = "0.6"
rapier2d = "0.11"
rapier_testbed2d = "0.11"
parry3d = { version = "0.7" }
bevy = "0.5"

[dependencies.sdl2]
version = "0.32.1"
default-features = false
features = ["gfx"]


[dependencies.salva2d]
version = "0.7.0"
default-features = false
features = [ "rapier", "rapier-testbed", "sampling" ]